[feat] add cypress testing tool

--- a/week4/package.json
+++ b/week4/package.json
@@ -6,6 +6,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:cypress": "cypress open",
     "eject": "react-scripts eject",
     "lint": "yarn run lint-prettier && yarn run lint-eslint",
     "lint-eslint": "eslint --ignore-path .gitignore src/**/*{ts,tsx} --fix",
@@ -18,6 +19,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.21",
     "axios": "^0.26.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
@@ -46,6 +48,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
+    "cypress": "^9.6.1",
     "eslint": "^7.11.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
