--- a/week4/.eslintrc.json
+++ b/week4/.eslintrc.json
@@ -13,7 +13,8 @@
     "plugin:prettier/recommended", // 추가
     "plugin:import/recommended",
     "plugin:import/typescript",
-    "plugin:jsx-a11y/recommended" // 추가
+    "plugin:jsx-a11y/recommended", // 추가
+    "plugin:cypress/recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
